# FEM

./: .anjuta_sym_db.db  README.md  TBD.txt  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
src/: CMassMatrix  CMassMatrix.cpp  CMassMatrix.hpp  CMatrix.hpp  CTriangulation.cpp  CTriangulation.hpp  Makefile.am  Matrices.cpp  Matrices.hpp  bernstein.cpp  bernstein.hpp  main.cc  makefile  matrix.hpp  multimensional.hpp  scriptLambdas  scriptLambdas.cpp  scriptTestBernstein.cpp  scriptTestMassMatrix  scriptTestMassMatrix.cpp  scriptTestMatrix  scriptTestMatrix.cpp  scriptTestReshape  scriptTestReshape.cpp  scriptTestTableQuadTri  scriptTestTableQuadTri.cpp  scriptTestTriangulation  scriptTestTriangulation.cpp  scriptTestUtils  scriptTestUtils.cpp  tableQuadTri.hpp  tableQuadTri.txt  triangulation.cpp  triangulation.cpp~  triangulation.h  utils.hpp
src/.deps/: MassMatrix.Po  main.Po
src/tests/: README.md  makefile  scriptTestArrayDecay  scriptTestArrayDecay.cpp  scriptTestCopy.cpp  scriptTestMassMatrix.cpp  scriptTestMatrix  scriptTestMatrix.cpp  scriptTestPointerThing  scriptTestPointerThing.cpp  scriptTestReshape  scriptTestReshape.cpp  scriptTestSwitch  scriptTestSwitch.cpp  scriptTestTableQuadTri  scriptTestTableQuadTri.cpp  scriptTestTranspose  scriptTestTranspose.cpp  scriptTestTriangulation  scriptTestTriangulation.cpp  scriptTestUtils
src/utils/: exportQuadrature.m  exportSizes.m  parseQuad.py  parseSizes.py  parsedQuads.txt
tests/: scriptTestMemory  scriptTestMemory.cpp
