## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = fem

fem_SOURCES = \
	main.cc \
	MassMatrix.cpp \
	MassMatrix.h \
	triangulation.cpp \
	triangulation.h

fem_LDFLAGS = 

fem_LDADD = 


